--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -45,3 +45,42 @@ height: 2.5rem;
     width: 1.5rem;
     cursor: pointer;
 }
+ .bars {
+     display: none;
+ }
+
+@media  screen and (max-width:856px)  {
+    .container{
+        width: 85%;
+    }
+.search{display: none;}
+.right{
+    gap: 1rem;
+}
+}
+@media  screen and (max-width:640px)  {
+    .container {
+            width: 90%;
+        }
+    .right{
+        position: absolute;
+        right: 0;
+        z-index: 9999;
+        background: white;
+        color: var(--black);
+        border-radius: 5px;
+        flex-direction: column;
+        padding: 1rem;
+    }
+    .menu{
+        flex-direction: column;
+        margin-left: -2rem;
+        display: none;
+    }
+    .bars{
+        display: block;
+    }
+    .search{
+        display: none;
+    }
+}
